@@ -34,9 +34,10 @@
     \item{toString}{\code{signature(x = "EnumValueDescriptor")}: same as \code{as.character} }
     \item{$}{\code{signature(x = "EnumValueDescriptor")}: invoke pseudo
       methods }
+    \item{name}{\code{signature(object = "EnumValueDescriptor", full = "logical")}:
+      return the name of this enum constant.}
     \item{number}{\code{signature(object = "EnumValueDescriptor")}:
       return the numeric value of this enum constant.}
-    % TODO(mstokely): This next one is broken.
     \item{enum_type}{\code{signature(object = "EnumDescriptor")} : retrieves the \linkS4class{EnumDescriptor} related to this value descriptor.}
   }
 
@@ -44,4 +45,25 @@
 \references{ The \code{EnumValueDescriptor} C++ class. 
   \url{http://code.google.com/apis/protocolbuffers/docs/reference/cpp/google.protobuf.descriptor.html#EnumValueDescriptor} }
 \author{ Romain Francois <francoisromain@free.fr> }
+\examples{
+\dontrun{
+# example proto file supplied with this package
+proto.file <- system.file( "proto", "addressbook.proto", package = "RProtoBuf" ) 
+# reading a proto file and creating the descriptor
+Person <- P( "tutorial.Person", file = proto.file )
+}
+\dontshow{Person <- P( "tutorial.Person" ) }
+# enum type
+Person$PhoneType
+
+# enum value type
+value(Person$PhoneType, 1)
+
+name(value(Person$PhoneType, 1))
+name(value(Person$PhoneType, 1), TRUE)
+
+number(value(Person$PhoneType, number=1))
+
+enum_type(value(Person$PhoneType, number=1))
+}
 \keyword{classes}
